--- a/configs/a369i_defconfig
+++ b/configs/a369i_defconfig
@@ -29,6 +29,7 @@ CONFIG_DM_SERIAL=y
 CONFIG_DM_USB=y
 CONFIG_DM_PMIC=y
 CONFIG_DM_REGULATOR=y
+CONFIG_DM_REGULATOR_COMMON=y
 CONFIG_DM_REGULATOR_FIXED=y
 CONFIG_DM_KEYBOARD=y
 CONFIG_DM_GPIO=y
@@ -75,6 +76,7 @@ CONFIG_SYSRESET_CMD_RESET=y
 CONFIG_SYSRESET_WATCHDOG=y
 ## USB
 CONFIG_USB=y
+#CONFIG_USB_HOST=y
 CONFIG_PHY=y
 CONFIG_PHY_MTK_TPHY=y
 #CONFIG_USB_MUSB_HOST=y
