configs: a369i: remove hdroffset from lk header

--- a/configs/d101_defconfig
+++ b/configs/d101_defconfig
@@ -214,7 +214,7 @@ CONFIG_TARGET_MT6572=y
 # CONFIG_TARGET_MT8512 is not set
 # CONFIG_TARGET_MT8516 is not set
 # CONFIG_TARGET_MT8518 is not set
-CONFIG_MTK_BROM_HEADER_INFO="lk=1;lkname=LK;hdroffset=0xffffffff"
+CONFIG_MTK_BROM_HEADER_INFO="lk=1;lkname=LK"
 CONFIG_SYS_BOOTM_LEN=0x800000
 CONFIG_SYS_LOAD_ADDR=0x84000000
 CONFIG_WATCHDOG_TIMEOUT_MSECS=60000
