--- a/arch/arm/dts/mt6572-lenovo-a369i.dts
+++ b/arch/arm/dts/mt6572-lenovo-a369i.dts
@@ -2,7 +2,7 @@
 #include <dt-bindings/input/input.h>
 #include <dt-bindings/gpio/gpio.h>
 #include "mt6572.dtsi"
-#include "mt6323.dtsi"
+//#include "mt6323.dtsi"
 #include "skeleton.dtsi"
 
 / {
