--- a/configs/d101_defconfig
+++ b/configs/d101_defconfig
@@ -742,7 +742,7 @@ CONFIG_ENV_IS_NOWHERE=y
 # CONFIG_SYS_REDUNDAND_ENVIRONMENT is not set
 # CONFIG_SYS_RELOC_GD_ENV_ADDR is not set
 CONFIG_USE_DEFAULT_ENV_FILE=y
-CONFIG_DEFAULT_ENV_FILE="board/jty/d101/d101.env"
+CONFIG_DEFAULT_ENV_FILE="arch/arm/mach-mediatek/mt6572/default.env"
 # CONFIG_ENV_VARS_UBOOT_RUNTIME_CONFIG is not set
 # CONFIG_ENV_IMPORT_FDT is not set
 # CONFIG_ENV_APPEND is not set
