arm: dts: mt6580: add wdt-reboot node

--- a/arch/arm/dts/mt6580.dtsi
+++ b/arch/arm/dts/mt6580.dtsi
@@ -39,6 +39,12 @@
     };
   };
   
+  wdt-reboot {
+    compatible = "wdt-reboot";
+    wdt = <&wdt>;
+    status = "okay";
+  };
+
   soc {
     #address-cells = <1>;
     #size-cells = <1>;
